<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0D9D9"
    tools:context="com.jl.librarian.AddBookActivity">
    <ImageView
        android:id="@+id/iv_image1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/iv_image1"
        android:padding="5dp"/>
    <LinearLayout
        android:id="@+id/ll_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/iv_image1"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/tv_isbn" />
        <EditText
            android:id="@+id/et_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:padding="2dp"
            android:hint="@string/et_isbn"
            android:maxLines="2"
            android:background="@null" />
        <TextView
            android:id="@+id/tv_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/icon_scan"
            android:padding="6dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_isbn"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_bookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookName" />
        <EditText
            android:id="@+id/et_bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookName"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookName"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookAuthor" />
        <EditText
            android:id="@+id/et_bookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookAuthor"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookPress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookAuthor"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_bookPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookPress" />
        <EditText
            android:id="@+id/et_bookPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookPress"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookPress"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_bookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookPrice" />
        <EditText
            android:id="@+id/et_bookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookPublishDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookPrice"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_bookPublishDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookPublishDay" />
        <EditText
            android:id="@+id/et_bookPublishDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookPublishDay"
            android:maxLines="2"
            android:background="@null"
            android:inputType="date"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookPublishDay"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_bookStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookStatus" />
        <Spinner
            android:id="@+id/sp_bookStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sp_bookStatus"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/ll_bookStatus">
        <Button
            android:id="@+id/btn_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3C8DC4"
            android:text="@string/btn_insert"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_backToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="#3C8DC4"
            android:text="@string/btn_backToMain"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>