<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0D9D9"
    tools:context=".UpdateBookInfoActivity">
    <LinearLayout
        android:id="@+id/ll_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/tv_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_isbn"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/tv_getISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_isbn"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_bookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookName"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_bookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookName"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookName"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookAuthor"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_bookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookAuthor"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookPress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookAuthor"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_bookPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookPress"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_bookPress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookPress"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookPress"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_bookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookPrice"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_bookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookPublishDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookPrice"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_bookPublishDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookPublishDay"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_bookPublishDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_bookPublishDay"
            android:maxLines="2"
            android:background="@null"
            android:inputType="date"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookPublishDay"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/tv_bookStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookStatus"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/tv_getBookStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/ll_bookStatus">
        <Button
            android:id="@+id/btn_updateBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3C8DC4"
            android:text="@string/btn_updateBook"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="#3C8DC4"
            android:text="@string/btn_cancel"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>