<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0D9D9"
    tools:context=".UpdatePwdActivity">
    <LinearLayout
        android:id="@+id/ll_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/tv_tip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tip1"/>
        <TextView
            android:id="@+id/tv_getName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#FF0000"/>
        <TextView
            android:id="@+id/tv_tip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_tip2" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_tip">
        <TextView
            android:id="@+id/tv_question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_question1"/>
        <TextView
            android:id="@+id/tv_getquestion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_question1">
        <EditText
            android:id="@+id/et_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_answer1"
            android:maxLines="2"
            android:background="@null"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_answer1">
        <TextView
            android:id="@+id/tv_question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_question2"/>
        <TextView
            android:id="@+id/tv_getquestion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_question2">
        <EditText
            android:id="@+id/et_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_answer2"
            android:maxLines="2"
            android:background="@null"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_formerPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_answer2">
        <TextView
            android:id="@+id/tv_formerPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_formerPwd"/>
        <EditText
            android:id="@+id/et_formerPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_formerPwd"
            android:maxLines="2"
            android:background="@null"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_newPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/ll_formerPwd">
        <TextView
            android:id="@+id/tv_newPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_newPwd"/>
        <EditText
            android:id="@+id/et_newPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_newPwd"
            android:maxLines="2"
            android:background="@null"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/ll_newPwd">
        <Button
            android:id="@+id/btn_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3C8DC4"
            android:text="@string/btn_sure"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="#3C8DC4"
            android:text="@string/btn_back"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>