<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0D9D9"
    tools:context=".BookLendActivity">
    <LinearLayout
        android:id="@+id/ll_isbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/tv_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dp"
            android:text="@string/tv_isbn" />
        <EditText
            android:id="@+id/et_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:padding="2dp"
            android:hint="@string/et_isbn"
            android:maxLines="2"
            android:background="@null" />
        <TextView
            android:id="@+id/tv_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/icon_scan"
            android:padding="6dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_bookName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_isbn"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_bookName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bookName1" />
        <TextView
            android:id="@+id/tv_getBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_readerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_bookName1"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_readerInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_readerInfo"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_readerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_readerInfo"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_readerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_readerName" />
        <EditText
            android:id="@+id/et_readerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_readerSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_readerName"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_readerSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_readerSex" />
        <Spinner
            android:id="@+id/sp_readerSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sp_readerSex"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_readerTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_readerSex"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_readerTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_readerTel" />
        <EditText
            android:id="@+id/et_readerTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_readerTel"
            android:maxLines="2"
            android:background="@null" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_readerTel"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"/>
        <TextView
            android:id="@+id/tv_getDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ll_date"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_remark"/>
        <EditText
            android:id="@+id/et_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_remark"
            android:lines="3"
            android:maxLines="3"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/ll_remark">
        <Button
            android:id="@+id/btn_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3C8DC4"
            android:text="@string/btn_sure"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_backToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="#3C8DC4"
            android:text="@string/btn_backToMain"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>