<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0D9D9"
    android:orientation="vertical"
    tools:context=".SystemActivity">
    <Button
        android:id="@+id/btn_addUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_addUser"
        android:background="#3C8DC4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btn_queryUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_addUser"
        android:text="@string/btn_queryUser"
        android:background="#3C8DC4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btn_deleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_queryUser"
        android:text="@string/btn_deleteUser"
        android:background="#3C8DC4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btn_updatePwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_deleteUser"
        android:text="@string/btn_updatePwd"
        android:background="#3C8DC4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>
</RelativeLayout>